--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,2 +1,14 @@
-hi my name is Nahid 
-I am a computer Engineer from pirgacha
+<!DOCTYPE html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>this my re start projects 1
+    
+    </h1>
+</body>
+</html>
