--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,12 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Details</title>
 </head>
-<body>
 
-    
+<body>
+    <!--navigation section-->
+    <section>
+        <nav>
+            <ul type="none">
+                <li><a href="#about_me">About me</a></li>
+                <li><a target="_blank" href="nothing.html">Nothing</a></li>
+                <li><a href="#about_collage">About collage</a></li>
+                <li><a href="#Projects">Projects</a></li>
+                <li><a href="#Skills">Skills</a></li>
+                <li><a href="#Contacts">Contacts</a></li>
+            </ul>
+        </nav>
+    </section>
+
+    <!--About me section-->
+
+    <section id="about_me">
+        <h1 style="color: red">Nahid Hasan Utsob</h1>
+
+        <a title="click to view" href="www.google.com"><img height="250px" width="200px" src="images.jpg"
+                alt="tree image"></a>
+
+        <p>আমি কুড়িগ্রাম পলিটেকনিক এ পড়ি।</p>
+    </section>
+    <hr />
+
+    <!--About section-->
+
+    <section id="about_collage">
+        <h1 style="color: red">About Our Institute</h1>
+        <p>
+            <strong>কুড়িগ্রাম পলিটেকনিক ইন্সটিটিউট</strong> বাংলাদেশের একটি অন্যতম
+            প্রাচীন ও বৃহত্তম কারিগরী শিক্ষা প্রতিষ্ঠান। <b>২০০৬</b> সালে কারিগরি
+            শিক্ষা অধিদপ্তর, শিক্ষা মন্ত্রণালয়ের অধীনে যাত্রা শুরু হয় চারটি বিভাগ
+            নিয়ে। বর্তমানে ৭ টি বিষয়ে প্রকৌশল ডিপ্লোমা চালু রয়েছে। দুই একরের কিছু
+            বেশি জায়গা নিয়ে অবস্থিত কুড়িগ্রাম পলিটেকনিক ইন্সটিটিউটের ক্যাম্পাসটি।
+        </p>
+    </section>
+    <hr />
+
+    <!--Experience section-->
+    <section id="Experience">
+        <h1 style="color: red">Experience</h1>
+        <p><strong>Experience 1:</strong> Nothing</p>
+        <p><strong>Experience 1:</strong> Nothing</p>
+        <p><strong>Experience 1:</strong> Nothing</p>
+    </section>
+    <hr />
+    <!--Skills section-->
+    <section id="Skills">
+        <h1 style="color: red">Skills</h1>
+
+        <table border="1px">
+            <tr>
+                <th>Language</th>
+                <th>Proficiency</th>
+            </tr>
+
+            <tr>
+                <td>English</td>
+                <td>Native</td>
+            </tr>
+            <tr>
+                <td>Bangla</td>
+                <td>B2</td>
+            </tr>
+        </table>
+
+        <!--list section-->
+        <ol>
+            <li>list 1</li>
+            <li>list 2</li>
+            <li>list 3</li>
+            <li>list 4</li>
+            <ul>
+                <li>sub list 1</li>
+                <li>sub list 2</li>
+                <li>sub list 3</li>
+            </ul>
+            </ul>
+            <li>list 5</li>
+            <li>list 6</li>
+            <li>list 7</li>
+        </ol>
+    </section>
+    <hr>
+    <!--Projects section-->
+
+    <section id="Projects">
+        <h1 style="color: red;">Projects</h1>
+
+
+        <ol type="1">
+            <a href="www.google.com">
+                <li>noting 1</li>
+            </a>
+            <li>noting 2</li>
+            <li>noting 3</li>
+        </ol>
+
+    </section>
+    <hr>
+
+    <!--Contacts section-->
+
+    <section id="Contacts">
+        <h1 style="color: red;">Contacts</h1>
+
+
+        <form action="">
+
+            <div>
+                <label for="name">Name</label>
+                <input required type="text" id="name">
+            </div>
+
+            <div>
+                <label for="Email">Email</label>
+                <input required type="email" id="Email">
+            </div>
+
+            <div>
+                <label for="phone">Phone</label>
+                <input required type="tel" id="phone">
+            </div>
+            <div>
+                <label for="password">Password</label>
+                <input required type="password" id="Password">
+            </div>
+
+
+            <div>
+                <label for="confirmPassword">Confirm Password</label>
+                <input required type="password" id="confirmPassword">
+            </div>
+            <div>
+                <input required type="submit" value="Submit">
+            </div>
+        </form>
+        <br>
+
+        <footer>
+            <a href="tel:01518989870">Call Me</a>
+            <a href="mailto:mdnahidhassan555@gmail.com">Mail Me</a>
+        </footer>
+
+    </section>
+
+
+
+
 </body>
+
 </html>
